Fix bug wherein vertical images were stretched on mobile
Removed stylesheet padding declarations for the lightbox
and cleaned up logic to ensure correct dimensions get set
for vertical images on mobile devices.

--- a/packages/block-library/src/image/style.scss
+++ b/packages/block-library/src/image/style.scss
@@ -204,7 +204,6 @@
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
-		padding: 30px;
 
 		figcaption {
 			display: none;
